recent work on calibrating a predictive model using BC data

--- a/modeling headway SP21/(3) a middle ground model for predicting downstream lithologies.ipynb
+++ b/modeling headway SP21/(3) a middle ground model for predicting downstream lithologies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -103,6 +103,33 @@
     "plt.plot(x, percent_sed, 'k', label = 'sedimentary', linestyle = ':')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cell dimensions: w x h x dx\n",
+    "\n",
+    "ig mass = (fraction of igneous) x cell volume x (1 - porosity) x ig density\n",
+    "\n",
+    "rate of igneous mass change = (volume rate in * igneous density) - (volume rate out * igneous density) - (volume rate in * igneous density * abrasion coefficient)\n",
+    "\n",
+    "volume rate in = (volume/width/time) * width"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\frac{\\partial m}{\\partial t} = \\rho q_s(x) w - \\rho q_s(x+dx) w - \\rho q_s(x) dx w \\beta$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "abrasion rate = q_s x surface area x dx x abrasion coefficient"
    ]
   },
   {
