recent progress, moving towards a two lithology model

--- a/modeling headway SP21/mass conservation with fines.ipynb
+++ b/modeling headway SP21/mass conservation with fines.ipynb
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Greg sez: we don't actually get the excess transport capcity from grain attrition back,\n",
+    "# Greg sez: we don't actually get the excess transport capacity from grain attrition back,\n",
     "# because that would have to come from bedrock and if we have full cover then can't get it from bedrock. \n",
     "# so just add back in + qsBeta_g to the term above\n",
     "# which will make it so that grain attrition degrades the alluvial layer\n",
