work on two liths, one sed, working version

--- a/modeling headway SP21/two lithologies, plucking and abrasion.ipynb
+++ b/modeling headway SP21/two lithologies, plucking and abrasion.ipynb
@@ -147,40 +147,40 @@
     "        qs[1:] = c * q[1:] * S * (1.0 - efac[:-1])\n",
     "        qs[0] = 0\n",
     "    \n",
-    "        # calculate flux of each lithology\n",
-    "        qs_ig[1:] = qs[1:] * (theta_ig[:-1])\n",
-    "        qs_sed[1:] = qs[1:] * (theta_sed[:-1])\n",
+    "#         # calculate flux of each lithology\n",
+    "#         qs_ig[1:] = qs[1:] * (theta_ig[:-1])\n",
+    "#         qs_sed[1:] = qs[1:] * (theta_sed[:-1])\n",
     "    \n",
-    "        # set constant, mixed feed of grains\n",
-    "        qs_ig[0] = amt_ig\n",
-    "        qs_sed[0] = amt_sed\n",
+    "#         # set constant, mixed feed of grains\n",
+    "#         qs_ig[0] = amt_ig\n",
+    "#         qs_sed[0] = amt_sed\n",
     "        \n",
-    "        # update percentages based on alluvial thickness\n",
-    "        undefined = np.where(H == 0)\n",
-    "        defined = np.where(H != 0)\n",
+    "#         # update percentages based on alluvial thickness\n",
+    "#         undefined = np.where(H == 0)\n",
+    "#         defined = np.where(H != 0)\n",
     "        \n",
-    "        theta_ig[undefined] = 0\n",
-    "        theta_ig[defined] += H_ig[defined]/H[defined]\n",
+    "#         theta_ig[undefined] = 0\n",
+    "#         theta_ig[defined] += H_ig[defined]/H[defined]\n",
     "        \n",
-    "        theta_sed[undefined] = 0\n",
-    "        theta_sed[defined] += H_sed[defined]/H[defined]\n",
+    "#         theta_sed[undefined] = 0\n",
+    "#         theta_sed[defined] += H_sed[defined]/H[defined]\n",
     "        \n",
-    "        # conserve mass\n",
-    "        theta_total = theta_ig + theta_sed\n",
-    "        dtheta = theta - theta_total\n",
-    "        theta_ig += dtheta * theta_ig\n",
-    "        theta_sed += dtheta * theta_sed\n",
+    "#         # conserve mass\n",
+    "#         theta_total = theta_ig + theta_sed\n",
+    "#         dtheta = theta - theta_total\n",
+    "#         theta_ig += dtheta * theta_ig\n",
+    "#         theta_sed += dtheta * theta_sed\n",
     "        \n",
     "        # calc bedrock erosion from stream power (plucking)\n",
     "        ero_plucking_ig = efac[:-1] * (k_ig[1:] * q[1:] * S)\n",
-    "        # ero_plucking_sed = efac[:-1] * (k_sed[1:] * q[1:] * S)\n",
+    "        ero_plucking_sed = efac[:-1] * (k_sed[1:] * q[1:] * S)\n",
     "        \n",
     "        # calc bedrock erosion from abrasion\n",
     "        ero_ab_ig = efac[:-1] * (bed_abrasion_ig[:-1] * qs[:-1])\n",
     "        ero_ab_sed = efac[:-1] * (bed_abrasion_sed[:-1] * qs[:-1])\n",
     "        \n",
     "        # calc bedrock erosion rate from stream power and abrasion\n",
-    "        ero[:-1] = ero_plucking_ig + ero_ab_ig + ero_ab_sed\n",
+    "        ero[:-1] = ero_plucking_ig + ero_ab_ig + ero_plucking_sed + ero_ab_sed\n",
     "        \n",
     "        # calc change in bedrock elev\n",
     "        etab[:-1] -= ero[:-1] * dt\n",
