adding new derivation to simple case 2 (partially complete, stuck at integration by parts step)

--- a/modeling headway SP21/simple case 2 (unltd sed w attrition).ipynb
+++ b/modeling headway SP21/simple case 2 (unltd sed w attrition).ipynb
@@ -294,135 +294,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "491b292c",
+   "execution_count": null,
+   "id": "6a814855",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.19126714e-17, 5.97666448e-18, 2.95445092e-18, 1.49077799e-18,\n",
-       "       0.00000000e+00])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dzdt"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "5b6a02f3",
+   "execution_count": null,
+   "id": "7b30c514",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.e-04, 1.e-04, 1.e-04, 1.e-04, 0.e+00])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "E"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "4ee42385",
+   "execution_count": null,
+   "id": "ae2d71c2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(slope)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "0e38e8f9",
+   "execution_count": 1,
+   "id": "b0909feb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(slope_pred)"
+    "# re-doing derivation below"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "281b69f1",
+   "cell_type": "markdown",
+   "id": "5b34f058",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-1.25225351e-17,  5.35788296e-08,  2.62258709e-08,  1.55791888e-08])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "slope - slope_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "f6cf9322",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.7475400140466506e-05"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "slope_pred[3]"
+    "Start with conservation of mass of sediment in a landscape \"cell\":\n",
+    "> $$\\frac{\\partial M}{\\partial t} = \\text{Mass in} - \\text{Mass out}$$\n",
+    "\n",
+    "We envision a world with unlimited sediment supply and attrition occurring on grains in transport. The cell has height $z$, total width $B$, and length $dx$. Contained within the cell is a of channel width $b$. The sediment has porosity $\\phi$ and density $\\rho$. The cell is experiencing uniform uplift $U$. Mass is added via sediment flux into the cell, as well as tectonic uplift into the cell. Mass is lost via sediment flux out of the cell, and grain attrition generating fines within the cell. Putting all these pieces together, we arrive at:\n",
+    "> $$\\frac{\\partial z B (1 - \\phi) dx \\rho}{\\partial t} = U B dx \\rho + Q_s\\bigr\\rvert_{x} \\rho - Q_s\\bigr\\rvert_{x + \\Delta x} \\rho - \\frac{Q_s}{B} \\beta B dx \\rho $$\n",
+    "\n",
+    "We can remove the constants from the partial derivative and bring them to the RHS of the equation:\n",
+    "> $$\\frac{\\partial z}{\\partial t} = \\frac{U B dx \\rho}{B (1 - \\phi) dx \\rho} + \\frac{Q_s\\bigr\\rvert_{x} \\rho}{B (1 - \\phi) dx \\rho} - \\frac{Q_s\\bigr\\rvert_{x + \\Delta x} \\rho}{B (1 - \\phi) dx \\rho} - \\frac{Q_s \\beta B dx \\rho}{B B (1 - \\phi) dx \\rho} $$\n",
+    "\n",
+    "Simplfy and pull out a common denominator:\n",
+    "> $$\\frac{\\partial z}{\\partial t} = \\frac{1}{(1 - \\phi) B} \\left( U B + \\frac{Q_s\\bigr\\rvert_{x}}{dx} - \\frac{Q_s\\bigr\\rvert_{x + \\Delta x}}{dx} - Q_s \\beta \\right)$$\n",
+    "\n",
+    "Rewrite the sediment flux pieces as a derivative:\n",
+    "> $$\\frac{\\partial z}{\\partial t} = - \\frac{1}{(1 - \\phi) B} \\left( \\frac{\\partial Q_s}{\\partial x} + Q_s \\beta - U B \\right)$$\n",
+    "\n",
+    "At steady state, change in sediment thickness is 0:\n",
+    "> $$0 = - \\frac{1}{(1 - \\phi) B} \\left( \\frac{\\partial Q_s}{\\partial x} + Q_s \\beta - U B \\right)$$\n",
+    "\n",
+    "Go about solving for $S$ in terms of $x$. $S$ lives within $Q_s$, so first we need to isolate $Q_s$:\n",
+    "> $$\\frac{\\partial Q_s}{\\partial x} = UB -  Q_s \\beta$$\n",
+    "\n",
+    "> $$d Q_s = UBdx -  Q_s \\beta dx$$\n",
+    "\n",
+    "> $$\\int_{0}^{Q_s} d Q_s = \\int_{0}^{x} UB dx - \\int_{0}^{x} Q_s \\beta dx$$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0909feb",
+   "id": "2225cda3",
    "metadata": {},
    "outputs": [],
    "source": []
