--- a/modeling headway SP21/testing lateral sediment stability.ipynb
+++ b/modeling headway SP21/testing lateral sediment stability.ipynb
@@ -7,11 +7,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the purpose of this notebook is to discover the source of instability in the full version of our model\n",
-    "# this means copying and pasting the full model from the notebook 'full model, small grid, weighted flux'\n",
-    "# and removing everything related to lateral sediment supply\n",
-    "# this SHOULD result in a smoothly functional model capable of achieving steady state\n",
-    "# we'll make sure we can do this, then take next steps"
+    "# the purpose of this notebook is to work out issues related to the delivery of lateral sediment into our channel\n",
+    "\n",
+    "# update 10/18/22:\n",
+    "## stability can be achieved by using discharge for the total drainage basin, \n",
+    "## and applying erosion over the total basin\n",
+    "## but does this compromise the idea of the valley lowering instantaneously while the hillslopes lag?\n",
+    "\n",
+    "# update 10/24/22:\n",
+    "## going to try to address some ongoing instabilities by tying the unit discharges to a fixed valley width\n",
+    "## also need to make sure sediment is conserved from cell to cell"
    ]
   },
   {
@@ -40,23 +45,23 @@
     "x_node = x + dx/2 # centered x node\n",
     "r = 10. # runoff rate\n",
     "Hstar = 0.5 # characteristic sediment thickness\n",
-    "beta = np.zeros(len(x))\n",
+    "beta = np.zeros(len(x)) # abrasion coeffcient (changes streamwise)\n",
     "beta[:24] = 0.04\n",
     "beta[24:] = 0.4\n",
-    "psi = 0.00004 # attrition factor\n",
-    "K = np.zeros(len(x))\n",
-    "K[:24] = 0.00001\n",
-    "K[24:] = 0.0001\n",
-    "K_ig = np.zeros(len(x))\n",
-    "K_ig[:24] = 0.000001\n",
-    "gamma = np.zeros(len(x))\n",
+    "psi = 0.00004 # attrition factor (constant, because sediment in transport is homogenous)\n",
+    "K = np.zeros(len(x)) # erodibility (changes streamwise)\n",
+    "K[:24] = 0.000000001\n",
+    "K[24:] = 0.00000001\n",
+    "K_ig = np.zeros(len(x)) # igneous erodibility (this is needed to split out fraction of bedrock erosion that produces sediment)\n",
+    "K_ig[:24] = 0.000000001\n",
+    "gamma = np.zeros(len(x)) # fraction of hillslope material that enters streams as coarse sed\n",
     "gamma[:24] = 0.3\n",
     "kxb = 25 # valley width coefficient\n",
     "Pxb = 1/5 # valley width exponent\n",
     "kb = 8.3e-8 # channel width coefficient\n",
     "phi = 0.55 # sediment porosity\n",
     "D = 0.05 # grain size\n",
-    "baselevel_rate = 0.00005"
+    "baselevel_rate = 0.00005 # baselevel fall rate"
    ]
   },
   {
@@ -76,22 +81,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e0166a70",
    "metadata": {},
    "outputs": [],
    "source": [
     "# calculate constant, derivative values\n",
     "\n",
-    "# B = kxb * (x_node**Pxb) # valley width   ## TWEAKED\n",
-    "B = ((1./3.) * (x_node**2))/dx\n",
-    "# Q = (r * kxb * x**(6/5))/(1 + Pxb) # discharge  ## WE TWEAKED THIS\n",
+    "B_valley = kxb * (x_node**Pxb) # valley width\n",
+    "B = ((1./3.) * (x_node**2))/dx ## THIS NEEDS ATTENTION, THIS IS NOT WIDTH AT ANY GIVEN POINT\n",
+    "# Q = (r * kxb * x**(6/5))/(1 + Pxb) # discharge\n",
     "Q = r * (1./3.) * (x)**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "65a56a99",
    "metadata": {},
    "outputs": [],
@@ -115,6 +120,7 @@
     "          baselevel_rate,\n",
     "          Q,\n",
     "          B,\n",
+    "          B_valley,\n",
     "          num_steps = 550000):\n",
     "    \n",
     "    # define more constants\n",
@@ -165,22 +171,22 @@
     "        b = (kb * Q[1:] * (S ** (7/6))) / (D**(3/2))\n",
     "        \n",
     "        # calculate unit discharge (L^2/T)\n",
-    "        q[1:] = Q[1:]/b\n",
+    "        q[1:] = Q[1:]/B_valley[1:]\n",
     "        \n",
     "        # calculate bed exposure\n",
     "        alpha = np.exp(-H/Hstar)\n",
     "        \n",
     "        # calculate sediment transport (L^3/T and L^2/T)\n",
     "        Qs[1:] = kqs * I * Q[1:] * S**(7./6.) * (1-alpha[:-1])\n",
-    "        qs[1:] = Qs[1:]/b\n",
+    "        qs[1:] = Qs[1:]/B_valley[1:]\n",
     "        \n",
     "        # calculate individual erosion mechanism rates (L^2/T)\n",
-    "        Eb_p[:-1] = K[1:] * Q[1:] * S * alpha[:-1]\n",
-    "        Eb_p_ig[:-1] = K_ig[1:] * Q[1:] * S * alpha[:-1]\n",
-    "        Eb_a[:-1] = beta[1:] * Qs[1:] * alpha[:-1]\n",
+    "        Eb_p[:-1] = K[1:] * q[1:] * S * alpha[:-1]\n",
+    "        Eb_p_ig[:-1] = K_ig[1:] * q[1:] * S * alpha[:-1]\n",
+    "        Eb_a[:-1] = beta[1:] * qs[1:] * alpha[:-1]\n",
     "        \n",
     "        # calculate total bedrock erosion rate (L/T)\n",
-    "        Eb[:-1] = (Eb_p[:-1] + Eb_a[:-1]) / B[1:]\n",
+    "        Eb[:-1] = (Eb_p[:-1] + Eb_a[:-1])\n",
     "        \n",
     "        # calculate attrition rate (L^2/T)\n",
     "        atr = psi * Qs\n",
@@ -257,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ed1a1147",
    "metadata": {},
    "outputs": [],
@@ -267,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "5ab3964f",
    "metadata": {},
    "outputs": [
@@ -400,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "70859c8a",
    "metadata": {
     "scrolled": true
@@ -412,7 +418,7 @@
        "0.6267434467923565"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,17 +429,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "d54d6a41",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f9a4927a890>"
+       "<matplotlib.legend.Legend at 0x7fe60048d4d0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -459,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "0c2f4199",
    "metadata": {},
    "outputs": [
@@ -493,7 +499,7 @@
        "       4.99950035e-05, 4.99946636e-05, 4.99943281e-05, 5.00000000e-05])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,17 +510,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "71d9067a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9a496ab5d0>]"
+       "[<matplotlib.lines.Line2D at 0x7fe60073ca50>]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -537,17 +543,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "45da11a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9a49800b10>]"
+       "[<matplotlib.lines.Line2D at 0x7fe6008a0090>]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -570,17 +576,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "db32dba8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9a49909410>]"
+       "[<matplotlib.lines.Line2D at 0x7fe6009a6610>]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -603,17 +609,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "88dd17c4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9a49a14c50>]"
+       "[<matplotlib.lines.Line2D at 0x7fe600ab4210>]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -636,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "a24f68aa",
    "metadata": {},
    "outputs": [],
