--- a/modeling headway FA22/analytical solutions/special case 2 (again).ipynb
+++ b/modeling headway FA22/analytical solutions/special case 2 (again).ipynb
@@ -183,7 +183,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9c0bbc8510>]"
+       "[<matplotlib.lines.Line2D at 0x7fb826c72890>]"
       ]
      },
      "execution_count": 10,
@@ -261,7 +261,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f9c0beace90>"
+       "<matplotlib.legend.Legend at 0x7fb826bbccd0>"
       ]
      },
      "execution_count": 13,
@@ -316,7 +316,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f9c0bf09cd0>"
+       "<matplotlib.legend.Legend at 0x7fb826f07650>"
       ]
      },
      "execution_count": 16,
