nice figures from sensitivity analysis

--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/default.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/default.ipynb
@@ -239,7 +239,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7faeb2353950>]"
+       "[<matplotlib.lines.Line2D at 0x7f880c37c510>]"
       ]
      },
      "execution_count": 8,
@@ -272,7 +272,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7faeb2565810>]"
+       "[<matplotlib.lines.Line2D at 0x7f880c5af490>]"
       ]
      },
      "execution_count": 9,
@@ -419,8 +419,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "37ed1e99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00799556, 0.01535183, 0.02211992, 0.02834687, 0.03407594,\n",
+       "       0.03934693, 0.04419649, 0.04865829, 0.05276334, 0.05654018,\n",
+       "       0.06001503, 0.06321206, 0.06615346, 0.06885968, 0.07134952,\n",
+       "       0.07364029, 0.07574789, 0.07768698, 0.07947103, 0.08111244,\n",
+       "       0.08262261, 0.08401203, 0.08529035, 0.08646647, 0.08754855,\n",
+       "       0.08854412, 0.08946008, 0.0903028 , 0.09107815, 0.0917915 ,\n",
+       "       0.09244782, 0.09305165, 0.09360721, 0.09411835, 0.09458862,\n",
+       "       0.09502129, 0.09541937, 0.09578562, 0.09612258, 0.0964326 ,\n",
+       "       0.09671783, 0.09698026, 0.09722171, 0.09744385, 0.09764823,\n",
+       "       0.09783626, 0.09800927, 0.09816844, 0.09831488, 0.09844961,\n",
+       "       0.09857358, 0.09868763, 0.09879256, 0.0988891 , 0.09897792,\n",
+       "       0.09905964, 0.09913483, 0.09920401, 0.09926765, 0.09932621,\n",
+       "       0.09938008, 0.09942965, 0.09947525, 0.09951721, 0.09955581,\n",
+       "       0.09959132, 0.099624  , 0.09965406, 0.09968172, 0.09970717,\n",
+       "       0.09973058, 0.09975212, 0.09977194, 0.09979018, 0.09980695,\n",
+       "       0.09982239, 0.09983659, 0.09984966, 0.09986168, 0.09987274,\n",
+       "       0.09988291, 0.09989227, 0.09990089, 0.09990881, 0.0999161 ,\n",
+       "       0.09992281, 0.09992898, 0.09993466, 0.09993989, 0.09994469,\n",
+       "       0.09994911, 0.09995318, 0.09995693, 0.09996037, 0.09996354,\n",
+       "       0.09996645, 0.09996914, 0.0999716 , 0.09997387, 0.        ])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3e5010ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04,\n",
+       "       1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04,\n",
+       "       1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04,\n",
+       "       1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04,\n",
+       "       1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04,\n",
+       "       1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04,\n",
+       "       1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04,\n",
+       "       1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04,\n",
+       "       1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04,\n",
+       "       1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04,\n",
+       "       1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04,\n",
+       "       1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04, 1.e-04,\n",
+       "       1.e-04, 1.e-04, 1.e-04, 0.e+00])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Eb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "587364ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.000106  , 0.00016338, 0.00021255, 0.00025466, 0.00029112,\n",
+       "       0.00032293, 0.00035081, 0.00037533, 0.00039693, 0.00041599,\n",
+       "       0.0004328 , 0.00044764, 0.00046072, 0.00047224, 0.00048237,\n",
+       "       0.00049126, 0.00049905, 0.00050583, 0.00051173, 0.00051683,\n",
+       "       0.00052121, 0.00052495, 0.00052812, 0.00053076, 0.00053294,\n",
+       "       0.00053471, 0.0005361 , 0.00053716, 0.00053791, 0.0005384 ,\n",
+       "       0.00053865, 0.00053868, 0.00053852, 0.00053818, 0.0005377 ,\n",
+       "       0.00053708, 0.00053634, 0.0005355 , 0.00053456, 0.00053354,\n",
+       "       0.00053245, 0.0005313 , 0.00053009, 0.00052884, 0.00052754,\n",
+       "       0.00052622, 0.00052486, 0.00052348, 0.00052208, 0.00052067,\n",
+       "       0.00051924, 0.00051781, 0.00051637, 0.00051492, 0.00051348,\n",
+       "       0.00051204, 0.0005106 , 0.00050917, 0.00050774, 0.00050632,\n",
+       "       0.00050491, 0.00050351, 0.00050212, 0.00050074, 0.00049937,\n",
+       "       0.00049801, 0.00049667, 0.00049534, 0.00049402, 0.00049271,\n",
+       "       0.00049142, 0.00049015, 0.00048889, 0.00048764, 0.0004864 ,\n",
+       "       0.00048518, 0.00048398, 0.00048278, 0.0004816 , 0.00048044,\n",
+       "       0.00047929, 0.00047815, 0.00047703, 0.00047592, 0.00047482,\n",
+       "       0.00047374, 0.00047267, 0.00047161, 0.00047056, 0.00046953,\n",
+       "       0.00046851, 0.0004675 , 0.0004665 , 0.00046551, 0.00046454,\n",
+       "       0.00046357, 0.00046262, 0.00046168, 0.00046075, 0.        ])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ql/B_valley"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "74588e8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save csv files\n",
+    "\n",
+    "np.savetxt('elevation csv files/eta_default.csv', eta_adj, delimiter = ',')\n",
+    "np.savetxt('alpha csv files/alpha_default.csv', alpha, delimiter = ',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9974e86",
    "metadata": {},
    "outputs": [],
    "source": []
