--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 14.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 14.ipynb
@@ -239,7 +239,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fa231dc31d0>]"
+       "[<matplotlib.lines.Line2D at 0x7fbca9c87450>]"
       ]
      },
      "execution_count": 8,
@@ -272,7 +272,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fa231f9d250>]"
+       "[<matplotlib.lines.Line2D at 0x7fbca9f35890>]"
       ]
      },
      "execution_count": 9,
@@ -419,8 +419,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f04b7bea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save csv files\n",
+    "\n",
+    "np.savetxt('elevation csv files/eta_exp_14.csv', eta_adj, delimiter = ',')\n",
+    "np.savetxt('alpha csv files/alpha_exp_14.csv', alpha, delimiter = ',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55008254",
    "metadata": {},
    "outputs": [],
    "source": []
