--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 9.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 9.ipynb
@@ -239,7 +239,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f97e3331390>]"
+       "[<matplotlib.lines.Line2D at 0x7fde103a0890>]"
       ]
      },
      "execution_count": 8,
@@ -272,7 +272,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f97e3566c10>]"
+       "[<matplotlib.lines.Line2D at 0x7fde10591190>]"
       ]
      },
      "execution_count": 9,
@@ -419,11 +419,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f04b7bea",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# save csv files\n",
+    "\n",
+    "np.savetxt('elevation csv files/eta_exp_9.csv', eta_adj, delimiter = ',')\n",
+    "np.savetxt('alpha csv files/alpha_exp_9.csv', alpha, delimiter = ',')"
+   ]
   }
  ],
  "metadata": {
