more work on manuscript figs

--- a/modeling headway FA22/manuscript figs/SA fig values.ipynb
+++ b/modeling headway FA22/manuscript figs/SA fig values.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "dx = 1000\n",
     "x = np.arange(0, 100000, dx)\n",
-    "area = area = (1./3.) * x**2"
+    "area = (1./3.) * x**2"
    ]
   },
   {
