--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 2_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 2_new math.ipynb
@@ -236,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fd475cb6390>]"
+       "[<matplotlib.lines.Line2D at 0x7f8129291c10>]"
       ]
      },
      "execution_count": 8,
@@ -269,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fd475ea5710>]"
+       "[<matplotlib.lines.Line2D at 0x7f81296a9750>]"
       ]
      },
      "execution_count": 9,
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "f04b7bea",
    "metadata": {},
    "outputs": [],
@@ -424,7 +424,8 @@
     "# save csv files\n",
     "\n",
     "np.savetxt('elevation csv files/eta_exp_2.csv', eta_adj, delimiter = ',')\n",
-    "np.savetxt('alpha csv files/alpha_exp_2.csv', alpha, delimiter = ',')"
+    "np.savetxt('alpha csv files/alpha_exp_2.csv', alpha, delimiter = ',')\n",
+    "np.savetxt('slope csv files/slope_exp_2.csv', S, delimiter = ',')"
    ]
   },
   {
