--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 3_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 3_new math.ipynb
@@ -236,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8a85563e90>]"
+       "[<matplotlib.lines.Line2D at 0x7f8cb739e9d0>]"
       ]
      },
      "execution_count": 8,
@@ -269,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8a8582dcd0>]"
+       "[<matplotlib.lines.Line2D at 0x7f8cb779d690>]"
       ]
      },
      "execution_count": 9,
@@ -424,7 +424,8 @@
     "# save csv files\n",
     "\n",
     "np.savetxt('elevation csv files/eta_exp_3.csv', eta_adj, delimiter = ',')\n",
-    "np.savetxt('alpha csv files/alpha_exp_3.csv', alpha, delimiter = ',')"
+    "np.savetxt('alpha csv files/alpha_exp_3.csv', alpha, delimiter = ',')\n",
+    "np.savetxt('slope csv files/slope_exp_3.csv', S, delimiter = ',')"
    ]
   },
   {
