--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 4_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 4_new math.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "edf9edd9",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f85979cd350>]"
+       "[<matplotlib.lines.Line2D at 0x7fd2ada2d190>]"
       ]
      },
      "execution_count": 9,
@@ -297,7 +297,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8597ae8d90>]"
+       "[<matplotlib.lines.Line2D at 0x7fd2adb61450>]"
       ]
      },
      "execution_count": 10,
@@ -452,7 +452,8 @@
     "# save csv files\n",
     "\n",
     "np.savetxt('elevation csv files/eta_exp_4.csv', eta_adj, delimiter = ',')\n",
-    "np.savetxt('alpha csv files/alpha_exp_4.csv', alpha, delimiter = ',')"
+    "np.savetxt('alpha csv files/alpha_exp_4.csv', alpha, delimiter = ',')\n",
+    "np.savetxt('slope csv files/slope_exp_4.csv', S, delimiter = ',')"
    ]
   },
   {
