--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 5_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 5_new math.ipynb
@@ -236,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fbc14338150>]"
+       "[<matplotlib.lines.Line2D at 0x7f8b30bf0090>]"
       ]
      },
      "execution_count": 8,
@@ -269,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fbc147ef810>]"
+       "[<matplotlib.lines.Line2D at 0x7f8b30d7f610>]"
       ]
      },
      "execution_count": 9,
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "f04b7bea",
    "metadata": {},
    "outputs": [],
@@ -433,7 +433,8 @@
     "# save csv files\n",
     "\n",
     "np.savetxt('elevation csv files/eta_exp_5.csv', eta_adj, delimiter = ',')\n",
-    "np.savetxt('alpha csv files/alpha_exp_5.csv', alpha, delimiter = ',')"
+    "np.savetxt('alpha csv files/alpha_exp_5.csv', alpha, delimiter = ',')\n",
+    "np.savetxt('slope csv files/slope_exp_5.csv', S, delimiter = ',')"
    ]
   },
   {
