--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 6_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 6_new math.ipynb
@@ -236,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8ada70b810>]"
+       "[<matplotlib.lines.Line2D at 0x7fc9314a0d90>]"
       ]
      },
      "execution_count": 8,
@@ -269,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8adaddfad0>]"
+       "[<matplotlib.lines.Line2D at 0x7fc9317140d0>]"
       ]
      },
      "execution_count": 9,
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "f04b7bea",
    "metadata": {},
    "outputs": [],
@@ -424,7 +424,8 @@
     "# save csv files\n",
     "\n",
     "np.savetxt('elevation csv files/eta_exp_6.csv', eta_adj, delimiter = ',')\n",
-    "np.savetxt('alpha csv files/alpha_exp_6.csv', alpha, delimiter = ',')"
+    "np.savetxt('alpha csv files/alpha_exp_6.csv', alpha, delimiter = ',')\n",
+    "np.savetxt('slope csv files/slope_exp_6.csv', S, delimiter = ',')"
    ]
   },
   {
