--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 8_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 8_new math.ipynb
@@ -229,17 +229,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "ad181e1d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9a1d7cbd90>]"
+       "[<matplotlib.lines.Line2D at 0x7fe7fba69690>]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -262,17 +262,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "5f032975",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9a1d8dcb10>]"
+       "[<matplotlib.lines.Line2D at 0x7fe7fbeab050>]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "17318f12",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
        "0.0002926246504921437"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "b1005f1a",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
        "       -7998.95449989, -7999.10587804, -7999.25468885, -7999.40000117])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "b881373c",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "96a0b74e",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
        "       4.45501277e-01, 2.94123133e-01, 1.45312325e-01, 0.00000000e+00])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "f04b7bea",
    "metadata": {},
    "outputs": [],
@@ -424,7 +424,8 @@
     "# save csv files\n",
     "\n",
     "np.savetxt('elevation csv files/eta_exp_8.csv', eta_adj, delimiter = ',')\n",
-    "np.savetxt('alpha csv files/alpha_exp_8.csv', alpha, delimiter = ',')"
+    "np.savetxt('alpha csv files/alpha_exp_8.csv', alpha, delimiter = ',')\n",
+    "np.savetxt('slope csv files/slope_exp_8.csv', S, delimiter = ',')"
    ]
   },
   {
