--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/default_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/default_new math.ipynb
@@ -228,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fcdcbb74950>]"
+       "[<matplotlib.lines.Line2D at 0x7fde6e033710>]"
       ]
      },
      "execution_count": 8,
@@ -261,7 +261,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fcdcbea0750>]"
+       "[<matplotlib.lines.Line2D at 0x7fde6e6a43d0>]"
       ]
      },
      "execution_count": 9,
@@ -529,7 +529,8 @@
     "# save csv files\n",
     "\n",
     "np.savetxt('elevation csv files/eta_default.csv', eta_adj, delimiter = ',')\n",
-    "np.savetxt('alpha csv files/alpha_default.csv', alpha, delimiter = ',')"
+    "np.savetxt('alpha csv files/alpha_default.csv', alpha, delimiter = ',')\n",
+    "np.savetxt('slope csv files/slope_default.csv', S, delimiter = ',')"
    ]
   },
   {
