more model runs and figures for manuscript

--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 13_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 13_new math.ipynb
@@ -248,7 +248,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc12a57db50>]"
+       "[<matplotlib.lines.Line2D at 0x7fafb4bb3d90>]"
       ]
      },
      "execution_count": 8,
@@ -281,7 +281,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc12a69f090>]"
+       "[<matplotlib.lines.Line2D at 0x7fafb4ea7550>]"
       ]
      },
      "execution_count": 9,
@@ -314,7 +314,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc12a7ed390>]"
+       "[<matplotlib.lines.Line2D at 0x7fafb4fe8890>]"
       ]
      },
      "execution_count": 10,
@@ -475,11 +475,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "2f800abf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# calc width\n",
+    "\n",
+    "b = (kb * Q[1:] * S**(7/6)) / (D**(3/2))\n",
+    "\n",
+    "np.savetxt('width csv files/b_exp_13.csv', b, delimiter = ',')\n",
+    "np.savetxt('Qs csv files/Qs_exp_13.csv', Qs, delimiter = ',')"
+   ]
   }
  ],
  "metadata": {
