--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 15_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 15_new math.ipynb
@@ -248,7 +248,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f7b25bc9910>]"
+       "[<matplotlib.lines.Line2D at 0x7f807fb32510>]"
       ]
      },
      "execution_count": 8,
@@ -281,7 +281,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f7b25de6710>]"
+       "[<matplotlib.lines.Line2D at 0x7f807fdf2a90>]"
       ]
      },
      "execution_count": 9,
@@ -442,11 +442,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9daff1c5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# calc width\n",
+    "\n",
+    "b = (kb * Q[1:] * S**(7/6)) / (D**(3/2))\n",
+    "\n",
+    "np.savetxt('width csv files/b_exp_15.csv', b, delimiter = ',')\n",
+    "np.savetxt('Qs csv files/Qs_exp_15.csv', Qs, delimiter = ',')"
+   ]
   }
  ],
  "metadata": {
