--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 17_attrition test_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 17_attrition test_new math.ipynb
@@ -540,9 +540,9 @@
    "source": [
     "# save csv files\n",
     "\n",
-    "np.savetxt('elevation csv files/eta_default.csv', eta_adj, delimiter = ',')\n",
-    "np.savetxt('alpha csv files/alpha_default.csv', alpha, delimiter = ',')\n",
-    "np.savetxt('slope csv files/slope_default.csv', S, delimiter = ',')"
+    "# np.savetxt('elevation csv files/eta_exp_17.csv', eta_adj, delimiter = ',')\n",
+    "# np.savetxt('alpha csv files/alpha_exp_17.csv', alpha, delimiter = ',')\n",
+    "# np.savetxt('slope csv files/slope_exp_17.csv', S, delimiter = ',')"
    ]
   },
   {
