--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 12_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 12_new math.ipynb
@@ -248,7 +248,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7ff54533a150>]"
+       "[<matplotlib.lines.Line2D at 0x7f831b982090>]"
       ]
      },
      "execution_count": 8,
@@ -281,7 +281,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7ff545558210>]"
+       "[<matplotlib.lines.Line2D at 0x7f831be9fb90>]"
       ]
      },
      "execution_count": 9,
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "f04b7bea",
    "metadata": {},
    "outputs": [],
@@ -451,11 +451,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "dc1b317c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# calc width\n",
+    "\n",
+    "b = (kb * Q[1:] * S**(7/6)) / (D**(3/2))\n",
+    "\n",
+    "np.savetxt('width csv files/b_exp_12.csv', b, delimiter = ',')\n",
+    "np.savetxt('Qs csv files/Qs_exp_12.csv', Qs, delimiter = ',')"
+   ]
   }
  ],
  "metadata": {
