--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 16_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 16_new math.ipynb
@@ -281,7 +281,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fd396b58750>]"
+       "[<matplotlib.lines.Line2D at 0x7fef17474cd0>]"
       ]
      },
      "execution_count": 9,
@@ -314,7 +314,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fd396d5d710>]"
+       "[<matplotlib.lines.Line2D at 0x7fef176f2e10>]"
       ]
      },
      "execution_count": 10,
@@ -520,11 +520,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "7dfc65b8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# calc width\n",
+    "\n",
+    "b = (kb * Q[1:] * S**(7/6)) / (D**(3/2))\n",
+    "\n",
+    "np.savetxt('width csv files/b_exp_16.csv', b, delimiter = ',')\n",
+    "np.savetxt('Qs csv files/Qs_exp_16.csv', Qs, delimiter = ',')"
+   ]
   }
  ],
  "metadata": {
