--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 2_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 2_new math.ipynb
@@ -236,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8129291c10>]"
+       "[<matplotlib.lines.Line2D at 0x7f91eb343710>]"
       ]
      },
      "execution_count": 8,
@@ -269,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f81296a9750>]"
+       "[<matplotlib.lines.Line2D at 0x7f91eb562950>]"
       ]
      },
      "execution_count": 9,
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "f04b7bea",
    "metadata": {},
    "outputs": [],
@@ -430,11 +430,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6d1ba1eb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# calc width\n",
+    "\n",
+    "b = (kb * Q[1:] * S**(7/6)) / (D**(3/2))\n",
+    "\n",
+    "np.savetxt('width csv files/b_exp_2.csv', b, delimiter = ',')\n",
+    "np.savetxt('Qs csv files/Qs_exp_2.csv', Qs, delimiter = ',')"
+   ]
   }
  ],
  "metadata": {
