--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 4_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 4_new math.ipynb
@@ -264,7 +264,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fd2ada2d190>]"
+       "[<matplotlib.lines.Line2D at 0x7fa0e1b33dd0>]"
       ]
      },
      "execution_count": 9,
@@ -297,7 +297,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fd2adb61450>]"
+       "[<matplotlib.lines.Line2D at 0x7fa0e1c59c90>]"
       ]
      },
      "execution_count": 10,
@@ -458,8 +458,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "062c60b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calc width\n",
+    "\n",
+    "b = (kb * Q[1:] * S**(7/6)) / (D**(3/2))\n",
+    "\n",
+    "np.savetxt('width csv files/b_exp_4.csv', b, delimiter = ',')\n",
+    "np.savetxt('Qs csv files/Qs_exp_4.csv', Qs, delimiter = ',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbf265f0",
    "metadata": {},
    "outputs": [],
    "source": []
