--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 5_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 5_new math.ipynb
@@ -236,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8b30bf0090>]"
+       "[<matplotlib.lines.Line2D at 0x7f98bfd5f710>]"
       ]
      },
      "execution_count": 8,
@@ -269,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8b30d7f610>]"
+       "[<matplotlib.lines.Line2D at 0x7f98bfe80510>]"
       ]
      },
      "execution_count": 9,
@@ -439,11 +439,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "aba23619",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# calc width\n",
+    "\n",
+    "b = (kb * Q[1:] * S**(7/6)) / (D**(3/2))\n",
+    "\n",
+    "np.savetxt('width csv files/b_exp_5.csv', b, delimiter = ',')\n",
+    "np.savetxt('Qs csv files/Qs_exp_5.csv', Qs, delimiter = ',')"
+   ]
   }
  ],
  "metadata": {
