--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 6_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 6_new math.ipynb
@@ -236,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc9314a0d90>]"
+       "[<matplotlib.lines.Line2D at 0x7fab79cbac10>]"
       ]
      },
      "execution_count": 8,
@@ -269,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc9317140d0>]"
+       "[<matplotlib.lines.Line2D at 0x7fab79f30850>]"
       ]
      },
      "execution_count": 9,
@@ -430,11 +430,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0285e48b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# calc width\n",
+    "\n",
+    "b = (kb * Q[1:] * S**(7/6)) / (D**(3/2))\n",
+    "\n",
+    "np.savetxt('width csv files/b_exp_6.csv', b, delimiter = ',')\n",
+    "np.savetxt('Qs csv files/Qs_exp_6.csv', Qs, delimiter = ',')"
+   ]
   }
  ],
  "metadata": {
