--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 7_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 7_new math.ipynb
@@ -236,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7ff3724b5c50>]"
+       "[<matplotlib.lines.Line2D at 0x7fc441b4b750>]"
       ]
      },
      "execution_count": 8,
@@ -269,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7ff3725eb390>]"
+       "[<matplotlib.lines.Line2D at 0x7fc441ea4190>]"
       ]
      },
      "execution_count": 9,
@@ -430,11 +430,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "aa6f1c54",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# calc width\n",
+    "\n",
+    "b = (kb * Q[1:] * S**(7/6)) / (D**(3/2))\n",
+    "\n",
+    "np.savetxt('width csv files/b_exp_7.csv', b, delimiter = ',')\n",
+    "np.savetxt('Qs csv files/Qs_exp_7.csv', Qs, delimiter = ',')"
+   ]
   }
  ],
  "metadata": {
