--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 9_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/Exp 9_new math.ipynb
@@ -236,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fece3bac990>]"
+       "[<matplotlib.lines.Line2D at 0x7fcf9f4b75d0>]"
       ]
      },
      "execution_count": 8,
@@ -269,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fece3e67090>]"
+       "[<matplotlib.lines.Line2D at 0x7fcf9f6a1490>]"
       ]
      },
      "execution_count": 9,
@@ -430,11 +430,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1e25b39e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# calc width\n",
+    "\n",
+    "b = (kb * Q[1:] * S**(7/6)) / (D**(3/2))\n",
+    "\n",
+    "np.savetxt('width csv files/b_exp_9.csv', b, delimiter = ',')\n",
+    "np.savetxt('Qs csv files/Qs_exp_9.csv', Qs, delimiter = ',')"
+   ]
   }
  ],
  "metadata": {
