--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/default_new math.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/default_new math.ipynb
@@ -228,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fde6e033710>]"
+       "[<matplotlib.lines.Line2D at 0x7fafbd3f5b90>]"
       ]
      },
      "execution_count": 8,
@@ -261,7 +261,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fde6e6a43d0>]"
+       "[<matplotlib.lines.Line2D at 0x7fafbd69e6d0>]"
       ]
      },
      "execution_count": 9,
@@ -522,6 +522,18 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "a9179593",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calc width\n",
+    "\n",
+    "b = (kb * Q[1:] * S**(7/6)) / (D**(3/2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "74588e8e",
    "metadata": {},
    "outputs": [],
@@ -530,7 +542,9 @@
     "\n",
     "np.savetxt('elevation csv files/eta_default.csv', eta_adj, delimiter = ',')\n",
     "np.savetxt('alpha csv files/alpha_default.csv', alpha, delimiter = ',')\n",
-    "np.savetxt('slope csv files/slope_default.csv', S, delimiter = ',')"
+    "np.savetxt('slope csv files/slope_default.csv', S, delimiter = ',')\n",
+    "np.savetxt('width csv files/b_default.csv', b, delimiter = ',')\n",
+    "np.savetxt('Qs csv files/Qs_default.csv', Qs, delimiter = ',')"
    ]
   },
   {
