--- a/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/hard sed soft bedrock.ipynb
+++ b/modeling headway FA22/manuscript figs/full model, instant hillslopes, 16 runs + default/hard sed soft bedrock.ipynb
@@ -2,28 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "8fc20d48",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this model includes ql\n",
-    "# it uses instantaneous bedrock erosion rate to calc ql\n",
-    "# it uses gamma to represent fraction of plucked material that becomes coarse gravel\n",
-    "# it uses theta to represent fraction of hillslope material that enters fluvial system as coarse \n",
-    "## (maybe this should be same as gamma, \n",
-    "## since the real fxn of this parameter is to tell us \n",
-    "## how much coarse stuff is available for bedload transport/abrasion)\n",
-    "\n",
-    "# potential updates: see if adding weighted average back in to ql calculation still allows for stability\n",
-    "## update on the update: this led to stability issues, and it's not worth the time now trying to debug, \n",
-    "## so just stick with using instantaneous erosion rate. \n",
-    "## Most interested in steady state profiles anyway, so this is fine."
+    "# in this notebook, we are testing out some new math to make the model a bit more self-consistent and logical\n",
+    "# and making sure it still runs to steady state in a reasonable time when those changes are made\n",
+    "# see notes from 3/8/23 in red, gridded notebook for details on changes\n",
+    "# and/or compare to \"default.ipynb\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "13f8fb7c",
    "metadata": {},
    "outputs": [],
@@ -34,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "a6ba582e",
    "metadata": {},
    "outputs": [],
@@ -54,14 +46,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "09d177eb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# define constants and other parameters\n",
-    "K = 1e-7 # erodibility\n",
+    "K = 1e-6 # erodibility\n",
     "beta = 0.0005 # abradability\n",
+    "zeta = 0.000025 # 0.00025 # abradability\n",
     "r = 5. # runoff rate\n",
     "U = 0.0001 # uplift or baselevel fall rate\n",
     "I = 0.01 # intermittency\n",
@@ -82,13 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "98308cda",
    "metadata": {},
    "outputs": [],
    "source": [
     "def model(x, dx, x_node,\n",
-    "          K, beta, gamma,\n",
+    "          K, beta, zeta, gamma,\n",
     "          D, phi, Hstar,\n",
     "          kb, kqs, I, r, U,\n",
     "          etab, H, eta,\n",
@@ -96,7 +89,7 @@
     "          num_steps = 1):\n",
     "    \n",
     "    q = Q/B_valley\n",
-    "    dt = 50\n",
+    "    dt = 1\n",
     "    \n",
     "    run_duration = dt * num_steps\n",
     "    cum_time = 0.0\n",
@@ -139,10 +132,10 @@
     "        Eb[:-1] = (Eb_p[:-1] + Eb_a[:-1]) / B_valley[:-1]\n",
     "        \n",
     "        # calc lateral flux\n",
-    "        ql[:-1] = ((Eb[:-1] * gamma)/beta) * (1 - np.exp(-beta * x[1:]/3))\n",
+    "        ql[:-1] = ((Eb[:-1] * gamma)/zeta) * (1 - np.exp(-zeta * x[1:]/3))\n",
     "        \n",
     "        # calc grain attrition\n",
-    "        atr = Qs * beta\n",
+    "        atr = Qs * zeta\n",
     "        \n",
     "        # calc sediment erosion rate\n",
     "        Eh[:-1] = 1/((1 - phi) * B_valley[:-1]) * (np.diff(Qs)/dx + atr[1:] - (Eb_p[:-1]*gamma) - ql[:-1])\n",
@@ -166,10 +159,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "b9c1fdab",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vanessa/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:44: RuntimeWarning: invalid value encountered in power\n",
+      "/Users/vanessa/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:48: RuntimeWarning: invalid value encountered in power\n"
+     ]
+    },
     {
      "ename": "KeyboardInterrupt",
      "evalue": "",
@@ -177,18 +178,18 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-b3584948f042>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# and run it\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;34m(\u001b[0m\u001b[0mdt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mS\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mQs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEb_p\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEb_a\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mql\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0metab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meta\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtest_run\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-11-aaba594afcb3>\u001b[0m in \u001b[0;36mmodel\u001b[0;34m(x, dx, x_node, K, beta, gamma, D, phi, Hstar, kb, kqs, I, r, U, etab, H, eta, B_valley, Q, num_steps)\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m         \u001b[0;31m# calc sediment erosion rate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m         \u001b[0mEh\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mphi\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mB_valley\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mdx\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0matr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mEb_p\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mgamma\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mql\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m         \u001b[0;31m# calc total erosion rate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-6-5308943d974f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# and run it\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;34m(\u001b[0m\u001b[0mdt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mS\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mQs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEb_p\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEb_a\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mql\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0metab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meta\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtest_run\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-5-6acf84dafec4>\u001b[0m in \u001b[0;36mmodel\u001b[0;34m(x, dx, x_node, K, beta, zeta, gamma, D, phi, Hstar, kb, kqs, I, r, U, etab, H, eta, B_valley, Q, num_steps)\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m         \u001b[0;31m# calc bed exposure\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m         \u001b[0malpha\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mH\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mHstar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m         \u001b[0;31m# calc sed transport\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "#now write a test\n",
-    "num_steps = 1000000000\n",
+    "num_steps = 100000000\n",
     "\n",
     "test_run = [x, dx, x_node, \n",
-    "            K, beta, gamma,\n",
+    "            K, beta, zeta, gamma,\n",
     "            D, phi, Hstar,\n",
     "            kb, kqs, I, r, U,\n",
     "            etab, H, eta,\n",
@@ -212,20 +213,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7658dc02",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(1 - alpha)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ad181e1d",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.plot(S)"
@@ -264,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b881373c",
+   "id": "0194623a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96a0b74e",
+   "id": "81848333",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,44 +273,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f04b7bea",
+   "id": "37ed1e99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e5010ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Eb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "587364ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ql/B_valley"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74588e8e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save csv files\n",
     "\n",
-    "np.savetxt('elevation csv files/eta_exp_1.csv', eta_adj, delimiter = ',')\n",
-    "np.savetxt('alpha csv files/alpha_exp_1.csv', alpha, delimiter = ',')\n",
-    "np.savetxt('slope csv files/slope_exp_1.csv', S, delimiter = ',')"
+    "np.savetxt('elevation csv files/eta_hard_sed.csv', eta_adj, delimiter = ',')\n",
+    "np.savetxt('alpha csv files/alpha_hard_sed.csv', alpha, delimiter = ',')\n",
+    "np.savetxt('slope csv files/slope_hard_sed.csv', S, delimiter = ',')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0af99c60",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# calc width\n",
-    "\n",
-    "b = (kb * Q[1:] * S**(7/6)) / (D**(3/2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67111cd2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.savetxt('width csv files/b_exp_1.csv', b, delimiter = ',')\n",
-    "np.savetxt('Qs csv files/Qs_exp_1.csv', Qs, delimiter = ',')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f4c8333",
+   "id": "c9974e86",
    "metadata": {},
    "outputs": [],
    "source": []
